src/styles/index.css
:root {
  --black: rgb(16, 15, 15);
  --paper: rgb(255, 252, 240);

  --base-950: rgb(28, 27, 26);
  --base-900: rgb(40, 39, 38);
  --base-850: rgb(52, 51, 49);
  --base-800: rgb(64, 62, 60);
  --base-700: rgb(87, 86, 83);
  --base-600: rgb(111, 110, 105);
  --base-500: rgb(135, 133, 128);
  --base-400: rgb(159, 157, 150);
  --base-300: rgb(183, 181, 172);
  --base-200: rgb(206, 205, 195);
  --base-150: rgb(218, 216, 206);
  --base-100: rgb(230, 228, 217);
  --base-50: rgb(242, 240, 229);

  --red-600: rgb(175, 48, 41);
  --orange-600: rgb(188, 82, 21);
  --yellow-600: rgb(173, 131, 1);
  --green-600: rgb(102, 128, 11);
  --cyan-600: rgb(36, 131, 123);
  --blue-600: rgb(32, 94, 166);
  --purple-600: rgb(94, 64, 157);
  --magenta-600: rgb(160, 47, 111);

  --red-400: rgb(209, 77, 65);
  --orange-400: rgb(218, 112, 44);
  --yellow-400: rgb(208, 162, 21);
  --green-400: rgb(135, 154, 57);
  --cyan-400: rgb(58, 169, 159);
  --blue-400: rgb(67, 133, 190);
  --purple-400: rgb(139, 126, 200);
  --magenta-400: rgb(206, 93, 151);

  --font-sm: 0.857rem;
  --max-content-width: 80rem;
  --menubar-size: 18rem;
  --menubar-zindex: 20;
  --titlebar-zindex: 20;

  --accent: var(--accent-cyan);
}

:root[data-theme="light"] {
  --bg: var(--paper);
  --bg-2: var(--base-50);
  --ui: var(--base-100);
  --ui-2: var(--base-150);
  --ui-3: var(--base-200);
  --sidebar-bg: var(--base-50);
  --primary-text: var(--black);
  --secondary-text: var(--base-600);
  --accent-red: var(--red-600);
  --accent-cyan: var(--cyan-600);
  --accent-yellow: var(--yellow-600);
  --accent-green: var(--green-600);
  --accent-blue: var(--blue-600);
  --accent-purple: var(--purple-600);
}

:root[data-theme="dark"] {
  --bg: var(--black);
  --bg-2: var(--base-950);
  --ui: var(--base-900);
  --ui-2: var(--base-850);
  --ui-3: var(--base-800);
  --sidebar-bg: var(--base-950);
  --primary-text: var(--base-200);
  --secondary-text: var(--base-500);
  --accent-red: var(--red-400);
  --accent-cyan: var(--cyan-400);
  --accent-yellow: var(--yellow-400);
  --accent-green: var(--green-400);
  --accent-blue: var(--blue-400);
  --accent-purple: var(--purple-400);
}

[data-accent="red"] {
  --accent: var(--accent-red);
}

[data-accent="cyan"] {
  --accent: var(--accent-cyan);
}

[data-accent="purple"] {
  --accent: var(--accent-purple);
}

[data-accent="yellow"] {
  --accent: var(--accent-yellow);
}

[data-accent="green"] {
  --accent: var(--accent-green);
}

[data-accent="blue"] {
  --accent: var(--accent-blue);
}

body {
  font-family: system-ui, sans-serif;
  line-height: 1.5;
  background-color: var(--bg);
  color: var(--primary-text);
}

.menubar {
  background-color: var(--sidebar-bg);
  border-right: 1px solid var(--ui);
  height: 100dvh;
  max-height: 100dvh;
  width: var(--menubar-size);

  display: grid;
  grid-template-rows: 1fr auto;
  overflow: hidden;

  position: fixed;
  top: 0;
  left: 0;
  z-index: var(--menubar-zindex);
}

.page {
  --gap: 1.5rem;
  width: calc(100% - var(--menubar-size) - var(--gap));
  transform: translate(calc(var(--menubar-size) + var(--gap)));
  padding-bottom: 3rem;
}

input[type="search"] {
  flex-shrink: 0;
  width: 100%;
  height: 2.5rem;
  padding-inline: 0.5rem;
  border: 1px solid var(--ui-2);
  border-radius: 0.25rem;
  background: var(--ui);
  color: var(--secondary-text);
}

/* Remove arrows from input type number */
input[type="number"]::-webkit-outer-spin-button,
input[type="number"]::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}

.textField {
  width: 100%;
  height: 2.5rem;
  padding-inline: 1rem;
  border: 1px solid var(--ui-2);
  border-radius: 0.25rem;
  background: var(--ui);
  color: var(--secondary-text);

  &[aria-invalid="true"] {
    border: 1px solid var(--accent-red);
    outline-width: 1px;
    outline-style: solid;
    outline-color: var(--accent-red);
  }
}

.textArea {
  width: 100%;
  border: 1px solid var(--ui-2);
  background-color: var(--ui);
  border-radius: 0.25rem;
  color: var(--secondary-text);
  padding: 0.5rem 1rem;
  resize: none;
  min-height: 2rem !important;
}

.btn {
  height: 2.5rem;
  padding-inline: 1.25rem;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  gap: 0.5rem;
  border: 1px solid var(--ui-2);
  background-color: transparent;
  border-radius: 0.5rem;
  font-weight: 600;
  transition-duration: 200ms;
  transition-property: background-color, border-color;
  color: var(--primary-text);

  &:enabled:hover:not(.btn-danger),
  &:is(a):hover:not(.btn-danger) {
    border-color: var(--ui-3);
    background-color: var(--ui-2);
  }

  &:disabled {
    opacity: 0.6;
  }

  &.btn-danger {
    border-color: transparent;
    color: var(--paper);
    background-color: var(--accent-red);
  }
}

.numbered {
  --number-size: 1.5rem;
  counter-increment: stepsCounter 1;

  &:before {
    flex-shrink: 0;
    display: inline-flex;
    align-items: center;
    justify-content: center;
    height: var(--number-size);
    width: var(--number-size);
    background-color: var(--accent);
    color: white;
    font-weight: bold;
    border-radius: 50vh;
    content: counter(stepsCounter);
  }
}

moaqz-toaster {
  --toast-background: var(--bg-2);
  --toast-border: var(--ui);
  --toast-title: var(--primary-text);
  --toast-description: var(--secondary-text);

  --toast-success: var(--accent-green);
  --toast-error: var(--accent-red);
  --toast-warning: var(--accent-yellow);
  --toast-info: var(--accent-blue);
  --toast-confirm: var(--accent-purple);

  --toast-actions-cancel-background-color: var(--accent-red);
}

input[type="radio"] {
  appearance: none;
  margin: 0;
  font: inherit;
  width: 1.25rem;
  height: 1.25rem;
  border: 0.15em solid var(--ui-2);
  border-radius: 50%;
  transform: translateY(0.1rem);
  display: grid;
  place-content: center;
}

input[type="radio"]::before {
  content: "";
  width: 0.75rem;
  height: 0.75rem;
  border-radius: 50%;
  transform: scale(0);
  transition: 120ms transform ease-in-out;
  box-shadow: inset 1em 1em var(--accent);
}

input[type="radio"]:checked::before {
  transform: scale(1);
}

select {
  appearance: none;
  background-color: transparent;
  border: none;
  font-family: inherit;
  font-size: inherit;
  cursor: inherit;
  line-height: inherit;
  position: relative;
}

select {
    width: 100%;
    min-width: 15ch;
    max-width: 30ch;
    border: 1px solid var(--ui);
    border-radius: 0.25rem;
    padding: 0.25rem 0.75rem;
    cursor: pointer;
    background-color: var(--bg-2);
    color: var(--secondary-text);
}

